# uk_address_matcher

./: .gitignore  01_process_price_paid.py  02_feature_eng.py  03_splink_model.py  LICENSE  _LICENCE.md  comparison_viewer_dashboard.html  example.py  example_2.py  example_against_canonical.py  example_compare_two.py  example_matching.py  example_performance.py  example_precomputed_tf.py  feature_eng.py  general_context.md  interactive_comparison.ipynb  match_example_data.ipynb  match_weights.html  new_example.py  process_price_paid.py  process_price_paid_2.py  pyproject.toml  readme.md  requirements.txt  settings.json  splink_model.py  sql_gen_fns.py  try.py
.github/workflows/: accuracy_from_labels_dataset.yml  address-matcher-test.yml  edge_cases_github_comment.yml  run_address_test.py  run_pytest.yml
address_matching/: cleaning.py  cleaning_pipelines.py  display_results.py  regexes.py  run_pipeline.py  splink_model.py  token_and_term_frequencies.py
address_matching/data/: common_end_tokens.csv  numeric_token_frequencies.parquet  splink_model.json
epc/: 03_splink_model.py
example_data/: companies_house_addresess_postcode_overlap.parquet  companies_house_data_licence.md  fhrs_addresses_sample.parquet  fhrs_data_licence.md  numeric_token_tf_table.parquet  open_streetmap_licence.md  rel_tok_freq.parquet
examples/: example_matching.py  match_epc_to_os.py  match_epc_to_os_2.py  match_one.py  preclean_full_os.py
examples/fhrs/: download_fhrs_data.py  match_fhrs_to_os.py
fhrs/: 01_download_data.py  02_feature_eng.py  03_splink_model.py
fhrs_companies_house/: 01_download_data.py
scripts/: accuracy_from_labels.py  accuracy_from_labels_2.py  analyse_test_cases.py  create_labels.py  derive_token_frequency_table.py  generate_better_tfs.py  generate_common_end_tokens.py  improve_parameters_using_gradient_descent.py  improve_parameters_using_gradient_descent_non_spsa.py  run_training.py
tests/: __init__.py  edge_case_addresses.yaml  test_accuracy_from_labels.py  test_address_matcher.py  test_addresses.yaml  test_bigrams.py  test_edge_cases.py  test_full_examples.py  test_source_dataset.py  utils.py
tests/test_data/: address_to_match.csv  epc_fake.csv  fhrs_fake.csv  one_clean_row_downing_street.parquet  os_fake.csv
tools/: test_arr_fn.py
uk_address_matcher/: __init__.py  analyse_results.py  arr_comparisons.py  cleaning.py  cleaning_pipelines.py  display_results.py  regexes.py  run_pipeline.py  splink_model.py  splink_model_vs_canonical.py  token_and_term_frequencies.py
uk_address_matcher/cleaning/: cleaning_pipelines.py  cleaning_steps.py  regexes.py  run_pipeline.py
uk_address_matcher/data/: address_token_frequencies.parquet  splink_model.json  splink_model_old.json
uk_address_matcher/linking_model/: blocking.py  splink_model.py  training.py
(+4 files in other folders)
