[tool.poetry]
name = "uk_address_matcher"
version = "0.0.1.dev11"
description = "A package for matching UK addresses using a pretrained Splink model"
authors = ["Robin Linacre <robinlinacre@hotmail.com>"]
license = "MIT"
readme = "readme.md"
repository = "https://github.com/robinL/uk_address_matcher"


[tool.poetry.dependencies]
python = "^3.9"
duckdb = ">=1.0.0"
splink = "^3.9.15"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

include = [
    "uk_address_matcher/data/address_token_frequencies.parquet",
    "uk_address_matcher/data/numeric_token_frequencies.parquet",
    "uk_address_matcher/data/common_end_tokens.csv"
]
