[project]
name = "uk_address_matcher"
version = "1.0.0.dev06"
description = "A package for matching UK addresses using a pretrained Splink model"
authors = [{name = "Robin Linacre", email = "robinlinacre@hotmail.com"}]
license = "MIT"
readme = "readme.md"
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.2.0",
    "splink==4.0.7.dev1",
    "sqlglot>=26.6.0",
]

[project.urls]
Repository = "https://github.com/robinL/uk_address_matcher"

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["uk_address_matcher"]
include = [
    "uk_address_matcher/data/address_token_frequencies.parquet",
    "uk_address_matcher/data/numeric_token_frequencies.parquet",
    "uk_address_matcher/data/common_end_tokens.csv",
    "uk_address_matcher/data/splink_model.json",
]


