[project]
name = "uk_address_matcher"
version = "1.0.0.dev15"
description = "A package for matching UK addresses using a pretrained Splink model"
authors = [{name = "Robin Linacre", email = "robinlinacre@hotmail.com"}]
readme = "readme.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "duckdb>=1.2.0",
    "splink==4.0.7.dev1",
    "sqlglot>=26.6.0",
]

[project.urls]
Repository = "https://github.com/robinL/uk_address_matcher"

[project.optional-dependencies]
dev = [
    "ipykernel>=6.29.4",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-data]
"uk_address_matcher" = ["data/*.parquet", "data/*.csv", "data/*.json"]


[dependency-groups]
dev = [
    "pyarrow>=19.0.1",
    "pytest>=8.3.4",
    "pyyaml>=6.0.2",
]

[tool.setuptools.packages.find]
include = ["uk_address_matcher*"]
# See https://github.com/pypa/setuptools/issues/4759
exclude = ["secret_data*", "_LICENSE.md"]


[tool.setuptools]
include-package-data = true
